z-index fix

--- a/css/style_home.css
+++ b/css/style_home.css
@@ -52,6 +52,7 @@ html, body {
     font-size: 22px;
     text-align: center;
     border-radius: 0px;
+    z-index: 9999;
 }
 
 .navbar a {
